removed more <br> tags and tweaked widths

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -3,24 +3,17 @@
 <div id="container">
 
 <main id="main-left" class="tone-box" role="main">
-	<h1>Welcome User!</h1>
-	<br />
+	<h1>Welcome</h1>
 	<p>This is the Manitoba public libraries' Z39.50 spray search and interlibrary loan requesting system.</p>
-	<br />
 	<h3>fILL User's Guide</h3>
-	<br />
 	<p>The fILL User's Guide can be found under the "Info" tab, in the "Documents" subtab.</p>
-	<br />
 	<h3>Links to Counting Opinions</h3>
 	<ul>
 	  <li><a href="http://mb.countingopinions.com/index.php?page_id=4">Statistics/Ready Reports</a></li>
 	  <li><a href="http://mb.countingopinions.com/memberlist_details.php?l=14702">Addresses, phone numbers, and links to library web sites</a></li>
 	  <li><a href="http://mb.countingopinions.com/locations.php?l=14702">Map of Manitoba Public Libraries</a></li>
 	</ul>
-	<br />
 	<p><a href="http://elm.lib.overdrive.com/">eLibraries Manitoba</a> monthly statistics can be found at the bottom of the <a href="http://mb.countingopinions.com/index.php?page_id=4">Counting Opinions Ready Reports</a> page.</p>
-	<br />
-	<br />
 	<p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
 	<p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
 	
@@ -40,11 +33,11 @@
 	<div id="main-right" class="tone-box" role="complimentary">
 		<h3>Accidentally said "Will-Supply"?</h3>
 		<p>The Shipping screen now has an <strong>Oops! Return this to the Respond list</strong> button.</p>
-		<p>This will remove the item from the Shipping list and place it back in the Respond list, where you can then mark it as unfilled.</p></br>
+		<p>This will remove the item from the Shipping list and place it back in the Respond list, where you can then mark it as unfilled.</p>
 		<h3>Cancelling a hold</h3>
 		<p>Borrowers: if a lender has placed a hold for you, that item will show up in the "Borrowing..." | "Holds placed" screen.</p>
 		<p>You can cancel a request that has a hold placed by clicking the <strong>Cancel request</strong> button for it.</p>
-		<p>Lenders: if you have a hold placed in your ILS for a borrower and the borrower cancels the request, it still shows up in your "Lending..." | "On hold" screen.  Instead of the usual "Ready to ship" button (which moves the request to your Shipping screen), that request will now have a <strong>Cancelled by borrower</strong> button, which will close the request and move it to history.  You should then (in your ILS) cancel the hold / check the item back in.</p></br>
+		<p>Lenders: if you have a hold placed in your ILS for a borrower and the borrower cancels the request, it still shows up in your "Lending..." | "On hold" screen.  Instead of the usual "Ready to ship" button (which moves the request to your Shipping screen), that request will now have a <strong>Cancelled by borrower</strong> button, which will close the request and move it to history.  You should then (in your ILS) cancel the hold / check the item back in.</p>
 		<p>The "Lending..." | "On hold" tab indicates if you have any borrower requests that have been cancelled, by adding a "/1" after the number of on-hold requests.  So, for example, if you have 5 requests that you have placed holds for, and borrowers have cancelled 2 of those, the tab will show "On hold 3/2" - three active and two cancelled requests.</p>
 		
 		<h3>Requests that have not (yet) been responded to</h3>
