--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -98,6 +98,7 @@ $('document').ready(function(){
     </div>
 
   <!-- Not displayed on any page except lightning (at the moment) -->
+<div id="header-right">
   <div id="header_searchbar" style="display: none">
     <form id="searchForm" name="search">
       <input id="query" type="text" size="50"/>
@@ -116,7 +117,8 @@ $('document').ready(function(){
     <p id="lid"><TMPL_VAR NAME="lid"></p>
   </div>
 
-</div><!--Div id header-->
+  </div><!--Div header-right-->
+  </div><!--Div id header-->
 
 
 <nav role="navigation">
