--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -1,6 +1,6 @@
 /**This is a duplicate off the current CSS file to test changes to the library side, any new classes or IDs etc will be added in a special section below**/
 
-/***---Start of new library client side CSS--**/
+/***---Start of new library client side CSS---**/
 
 #main-left {
 	width: 30%;
@@ -18,6 +18,104 @@
 	margin-bottom: 1em;
 }
 
+nav
+{
+	display: block;
+	float: left;
+	width: 100%;
+	margin: .5em 0em;
+	font-size: 1.4em;
+	border-bottom: #06a0ca solid 5px;
+}
+
+nav ul
+{
+	margin-top: .5em;
+	padding: 0px;
+}
+
+nav ul li
+{
+	list-style-type: none;
+	display: inline;
+}
+
+nav li a
+{
+	margin: 5px;
+	display: block;
+	float: left;
+	padding: 5px 10px;
+	text-decoration: none;
+}
+
+/* Navigation link states */
+/* unvisted link */
+nav li a:link {
+ 	background: #183935;/*main dark green colour*/
+ 	text-decoration: none;
+	color: #fff;
+}
+/* visited link */
+nav li a:visited {
+	background: #183935;
+	color: #fff;
+}
+/* mouse over link */
+nav li a:hover { 
+	background: #06a0ca; 
+	color: #fff;
+}
+/*selected link */
+nav li a:active {
+	background: #183935;
+	color: #fff;
+}
+
+nav li a.current_tab {
+	background: #06a0ca; 
+	color: #fff;
+}
+
+#csssubmenu ul
+{
+  background-color: #caff70;
+  text-align: center;
+  margin: 0em;
+  padding: 0.4em;
+  list-style: none;
+}
+#csssubmenu ul li 
+{
+  margin: 0 ;
+  padding: 0 ;
+  display: inline ;
+  text-align: center ;
+  list-style: none ;
+  font-family: Arial, Helvetica, sans-serif ;
+}
+#csssubmenu li a
+{
+  color: #003399 ;
+  background-color: #dbe3ff;
+  border: 1px outset #bfffe4 ;
+  padding: 3px ;
+  text-decoration: none ;
+  display: inline ;
+}
+#csssubmenu li a:hover {
+  color: #003399;
+  background-color: #fff ;
+}
+#csssubmenu li.current_tab a
+{
+  color: #000 ;
+  background-color: #fff ;
+  border: 1px outset #bfffe4 ;
+  padding: 3px ;
+  text-decoration: none ;
+  display: inline ;
+}
 
 /***---End of new library client side CSS--**/
 
@@ -153,68 +251,6 @@ header {
   
 }
 
-nav
-{
-	display: block;
-	float: left;
-	width: 100%;
-	margin: .5em 0em;
-	min-width: 480px;
-	font-size: 1.4em;
-	border-bottom: #06a0ca solid 5px;
-}
-
-nav ul
-{
-	margin-top: .5em;
-	padding: 0px;
-}
-
-nav ul li
-{
-	list-style-type: none;
-	display: inline;
-}
-
-nav li a
-{
-	margin-right: 10px;
-	-moz-border-radius: 0px;
-	-webkit-border-radius: 5px 5px 0px 0px;
-	border-radius: 5px 5px 0px 0px;
-	display: block;
-	float: left;
-	padding: 5px 10px;
-	text-decoration: none;
-}
-
-/* Navigation link states */
-/* unvisted link */
-nav li a:link {
- 	background: #183935;/*main dark green colour*/
- 	text-decoration: none;
-	color: #fff;
-}
-/* visited link */
-nav li a:visited {
-	background: #183935;
-	color: #fff;
-}
-/* mouse over link */
-nav li a:hover { 
-	background: #06a0ca; 
-	color: #fff;
-}
-/*selected link */
-nav li a:active {
-	background: #183935;
-	color: #fff;
-}
-
-nav li a.current_tab {
-	background: #06a0ca; 
-	color: #fff;
-}
 
 #search-container {
 	width: 100%;
