new logo! new menu names

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -94,7 +94,7 @@ $('document').ready(function(){
 
 <div id="header">
     <div id="header-left">
-      <div id="fill-logo"><a href="/cgi-bin/info.cgi?rm=welcome"><img src="/img/fill-logo.png" alt="fill"></a></div>
+      <div id="fill-logo"><a href="/cgi-bin/info.cgi?rm=welcome"><img src="/img/fill-lib-logo.png" alt="fill"></a></div>
       <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
     </div>
 
@@ -126,13 +126,13 @@ $('document').ready(function(){
   <ul class="nav inline-items">
     <li id="menu_borrow">
       <a href="/cgi-bin/lightning.cgi?rm=lightning_search_form">
-      Borrowing from other libraries
+      Borrowing
       </a>
     </li>
 
     <li id="menu_lend">
       <a href="/cgi-bin/lightning.cgi?rm=pull_list">
-      Lending to other libraries
+      Lending
       </a>
     </li>
 
@@ -168,7 +168,7 @@ $('document').ready(function(){
 
     <li id="menu_rotations" style="display:none;">
       <a href="/cgi-bin/rotations.cgi?rm=receive_form">
-      Rotation manager
+      Rotation Manager
       </a>
     </li>
 
