--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -138,7 +138,7 @@ $('document').ready(function(){
 
     <li id="menu_borrow_current_requests">
       <a href="/cgi-bin/lightning.cgi?rm=current">
-      Current ILLs
+      Current
       </a>
     </li>
 
@@ -150,7 +150,7 @@ $('document').ready(function(){
 
     <li id="menu_myaccount">
       <a href="/cgi-bin/myaccount.cgi?rm=myaccount_settings_form">
-      My Account
+      Account
       </a>
     </li>
 
