--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -127,6 +127,8 @@ nav li a.current_tab {
 
 /***---End of new library client side CSS--**/
 
+
+
 *, *:before, *:after {
   -moz-box-sizing: border-box; 
   -webkit-box-sizing: border-box; 
@@ -149,6 +151,12 @@ nav li a.current_tab {
 /* mouse over link */
  a:hover {
  	text-decoration: none;
+	color: #383;
+}
+
+/*focus over link*/
+a:focus {
+	text-decoration: none;
 	color: #383;
 }
 
@@ -193,7 +201,6 @@ h3 {
 	padding: ;
 	width: 90%;
 	height: auto;
-	
 	clear: both;  /* start fresh with floatiness within the container */
 }
 
@@ -259,9 +266,78 @@ header {
   
 }
 
+nav
+{
+	display: block;
+	float: left;
+	width: 100%;
+	margin: .5em 0em;
+	
+	font-size: 1.4em;
+	border-bottom: #06a0ca solid 5px;
+}
+
+nav ul
+{
+	margin-top: .5em;
+	padding: 0px;
+}
+
+nav ul li
+{
+	list-style-type: none;
+	display: inline;
+}
+
+nav li a
+{
+	margin-right: 10px;
+	-moz-border-radius: 0px;
+	-webkit-border-radius: 5px 5px 0px 0px;
+	border-radius: 5px 5px 0px 0px;
+	display: block;
+	float: left;
+	padding: 5px 10px;
+	text-decoration: none;
+}
+
+/* Navigation link states */
+/* unvisted link */
+nav li a:link {
+ 	background: #183935;/*main dark green colour*/
+ 	text-decoration: none;
+	color: #fff;
+}
+/* visited link */
+nav li a:visited {
+	background: #183935;
+	color: #fff;
+}
+/* mouse over link */
+nav li a:hover { 
+	background: #06a0ca; 
+	color: #fff;
+}
+/*selected link */
+nav li a:active {
+	background: #183935;
+	color: #fff;
+}
+
+/* focus over link */
+nav li a:focus { 
+	background: #06a0ca; 
+	color: #fff;
+}
+
+nav li a.current_tab {
+	background: #06a0ca; 
+	color: #fff;
+}
 
 #search-container {
 	width: 100%;
+	
 	display: block;
 }
 
@@ -284,7 +360,7 @@ header {
 {
 	float: right;
 	width: 80%; 
-	min-width: 250px;
+	min-width: 400px;
   	padding: 1.25em; 
   	margin-bottom: 1em;
 }
@@ -293,7 +369,7 @@ header {
 {
 	float: left;
 	width: 18%;
-	min-width: 150px;
+	min-width: 180px;
 	margin-bottom: 1.5em;
 	display: inline;
   	padding: 1em; 
@@ -313,7 +389,6 @@ header {
 	padding:0px;
 	overflow: hidden;!important
 }
-
 #progress_filler {
 	height:15px;
 	width:;/*is styled in, 'fill-client-public.js'*/
@@ -325,6 +400,7 @@ header {
 	margin-right:200px;
 	margin-top:-15px;
 }
+
 
 #main-info-left
 {
@@ -415,7 +491,10 @@ header {
 }
 .covers:hover {
 	border: 3px dashed #c0c0c0; 
+}
 
+.covers:focus {
+	border: 3px dashed #c0c0c0; 
 }
 
 footer
@@ -441,6 +520,7 @@ input[type=text]
     font-size: 1.4em;
     padding-left:10px;
     width: auto;
+    
     border: 2px #c3c3c3 solid;
 }
 
@@ -453,6 +533,7 @@ input[type=password]
     font-size: 1.4em;
     padding-left:10px;
     width: auto;
+    
     border: 2px #c3c3c3 solid;
 }
 
@@ -482,6 +563,20 @@ input[type=submit]:hover
     text-transform:capitalize;
 }
 
+input[type=submit]:focus
+{
+    margin: .5em;
+	padding: .3em 1em;
+	border: 1px #06a0ca solid;
+	border-radius: 5px;
+	background-color: #06a0ca;
+	color: #fff;
+    font-size: 1.4em;
+    width: auto;
+    text-transform:capitalize;
+}
+
+
 input[type=submit], input[type=text], input[type=password]
 {
     border: 0;
@@ -501,6 +596,10 @@ input[type=submit], input[type=text], input[type=password]
 }
 
 #fill-button:hover {
+	background: #06a0ca;
+}
+
+#fill-button:focus {
 	background: #06a0ca;
 }
 
@@ -524,6 +623,11 @@ input[type=submit], input[type=text], input[type=password]
 }
 
 #butlink:hover {
+	background-color: #06a0ca;
+	border: 1px solid #06a0ca;
+}
+
+#butlink:focus {
 	background-color: #06a0ca;
 	border: 1px solid #06a0ca;
 }
@@ -564,6 +668,11 @@ button {
 	border: 1px solid #06a0ca;
 }
 
+.button-left:focus {
+	background-color: #06a0ca;
+	border: 1px solid #06a0ca;
+}
+
 .button-right {
 	float: right;
     font-size: 1.4em;
@@ -576,7 +685,7 @@ button {
 	margin-right: 1em;
 }
 
-/*discontinued from text based fill logo
+/*discontinued for text based fill logo
 .fill {
 	color:#fff; 
 	font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
@@ -828,3 +937,167 @@ image courtesy of http://www.famfamfam.com/lab/icons/silk/
     width: 250px;
 }
 /*------------------------------------------------------*/
+/*Mobile styles. The site is generally responsive, however not great on smaller phone screen. These styles will address this*/
+
+@media screen 
+and (max-width : 50em) 
+
+{
+
+#container
+{
+	margin: auto;
+	padding: ;
+	width: 95%;
+	height: auto;
+	clear: both;  /* start fresh with floatiness within the container */
+	text-align: center;
+}
+
+button {
+	font-size: 1.2em;
+	margin: auto;
+}	
+
+#header-left {
+	width: 100%;
+	height: auto;
+	display: block;
+}
+
+#header-right {
+	float: left;
+ 	width: 100%;
+ 	margin-top: 1em;
+ 	display: block;
+}
+
+nav li a
+{
+	margin: .3em;
+	display: block;
+	font-size: 1.2em;
+	font-weight: bold;
+	float: left;
+	padding: 5px 10px;
+	text-decoration: none;
+}
+
+input[type=text]
+{
+	margin: .5em .5em;
+	padding: .3em;
+    background-color: #fff;
+    border:solid 1px #505050;
+    font-size: 1.4em;
+    padding-left:10px;
+    width: 90%;
+    border: 2px #c3c3c3 solid;
+}
+
+#search-container {
+	width: 100%;
+	display: block;
+	margin: auto;
+}
+
+.login {
+  display: block;
+  clear: all;
+  width: 100%;
+  margin: auto;
+}
+
+#main
+{
+	float: left;
+	display: block;
+	width: 100%; 
+  	padding: 1.25em; 
+  	margin: auto;
+  	margin-bottom: 1em;
+}
+
+#aside
+{
+	width: 100%;
+	margin-bottom: 1.5em;
+	display: block;
+  	padding: 1em; 
+}
+
+#main-info-left
+{
+	width: 100%;
+	margin-bottom: 1em;
+	display: block;
+  	padding: 1.25em; 
+  	
+}
+
+#main-info-right
+{
+	width: 100%;
+	margin-bottom: 1em;
+	display: block;
+  	padding: 1.25em;  	
+}
+
+#aside-img-welcome {
+
+	display: none;
+}
+
+#main-info-welcome 
+{
+	width: 100%;
+	height: auto;
+	margin: .9em;
+  	padding: 1.25em;  
+}
+
+#welcome-box {
+	font-size: 1.2em;
+	border: 0px;
+	height: auto;
+	padding: 1em;
+	margin-top: 1em;
+}
+
+#aside-img-right
+{
+	width: 100%;
+	margin-bottom: 1.5em;
+	display: block;
+  	padding: 0px; 
+  	font-size: 1.2em;
+}
+
+#aside-img-left
+{
+	width: 100%;
+	margin-bottom: 1.5em;
+	display: block;
+  	padding: 0px;
+  	font-size: 1.2em; 
+}
+
+footer {
+	width: 100%;
+	display: block;
+}
+
+.record {
+        margin-bottom: 1em;
+        font-size: 1.2em;
+}
+.record 
+.primary_info {
+	text-align: left;
+}
+
+.secondary_info {
+	text-align: left;
+}
+
+}
