added container to my account

--- a/templates/submenu_myaccount.tmpl
+++ b/templates/submenu_myaccount.tmpl
@@ -1,6 +1,8 @@
 <!-- Submenu: myaccount -->
 
 <!--div id="submenu"-->
+<div id="container">
+
 <div id="csssubmenu">
   <ul>
     <li id="menu_myaccount_settings">
