--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head><title><TMPL_VAR name="pagetitle"></title>
+<meta name="viewport" content="width=device-width, inital-scale=1">
 
 <!--[if lt IE 9]>
   <script>
