--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -946,17 +946,16 @@ and (max-width : 50em)
 
 #container
 {
-	margin: auto;
+	margin: .5em;
 	padding: ;
 	width: 95%;
 	height: auto;
 	clear: both;  /* start fresh with floatiness within the container */
-	text-align: center;
 }
 
 button {
 	font-size: 1.2em;
-	margin: auto;
+	margin: 1em;
 }	
 
 #header-left {
@@ -998,7 +997,7 @@ input[type=text]
 #search-container {
 	width: 100%;
 	display: block;
-	margin: auto;
+	margin: 1em;
 }
 
 .login {
