--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -6,6 +6,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><TMPL_VAR name="pagetitle"></title>
+  <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
   <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1a.css">
   <link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css"></link>
   <link type="text/css" rel="stylesheet" href="/css/feedstyles.1.1.css">
