changes to html in library login form

--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -9,16 +9,14 @@
 <p><br/></p>
 
 <div>
-  <div class="login_center">
+  <div class="login">
     <form action="/cgi-bin/lightning.cgi" method="post" name="loginform">
       <div class="login">
-	<div class="login_header">
+	<div class="login-header">
 	  Sign in to fILL
 	</div>
-	<div class="login_content">
-	  <ul class="message">
-	    <li>Manitoba Public Libraries ILL Management System.</li>
-	  </ul>
+	<div class="login-content">
+
 	  <fieldset>
             <label for="authen_username">User Name</label>
             <input type="text" value="" size="20" name="authen_username" tabindex="1" id="authen_loginfield"><br>
