login field for library side

--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -8,12 +8,12 @@
 
 <p><br/></p>
 
-<div>
+<div class="clear">
   <div class="login">
     <form action="/cgi-bin/lightning.cgi" method="post" name="loginform">
       <div class="login">
 	<div class="login-header">
-	  Sign in to fILL
+	  <span class="login-header-title>Sign in to fILL</style>
 	</div>
 	<div class="login-content">
 
