--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -3,7 +3,7 @@
 <style type="text/css">
 
 
-/* ]]&gt; */--&gt;
+
 </style>
 
 <p><br/></p>
@@ -25,15 +25,16 @@
 	  </fieldset>
 	</div>
 
-	<div class="login_footer">
+	<div class="login-footer">
 	  <div class="buttons">
-            <input type="submit" class="button" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
+            <input type="submit" class="button-left" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
 	  </div>
 	</div>
+  </div>
       <input type="hidden" value="https://localhost/cgi-bin/lightning.cgi?rm=search_simple_ajax_form;submit=Log%20in" name="destination">
       <input type="hidden" value="authen_login" name="rm">
     
-  </div>
+
   </form>
 </div>
 
