--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -1,18 +1,10 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
-<style type="text/css">
-
-
-
-</style>
-
-<p><br/></p>
-
 <div class="clear">
  <form action="/cgi-bin/lightning.cgi" method="post" name="loginform">
   <div class="login">
   	<div class="login-header">
-  	  <span class="login-header-title>Sign in to fILL</style>
+  	  <span class="login-header-title">Sign in to fILL</span>
   	</div>
 
 	<div class="login-content">
@@ -27,14 +19,13 @@
 
 	<div class="login-footer">
 	  <div class="buttons">
-            <input type="submit" class="button-left" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
+      <input type="submit" class="button-left" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
 	  </div>
 	</div>
+
   </div>
       <input type="hidden" value="https://localhost/cgi-bin/lightning.cgi?rm=search_simple_ajax_form;submit=Log%20in" name="destination">
       <input type="hidden" value="authen_login" name="rm">
-    
-
   </form>
 </div>
 
