new header colour

--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -2,6 +2,10 @@
 
 /***---Start of new library client side CSS---**/
 
+.header-library {
+	background-color: a2aac4;
+}
+
 #main-left {
 	width: 30%;
 	padding: 1em;
