--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -93,7 +93,7 @@ $('document').ready(function(){
 
 <body class="example_alt_pagination" onload="domReady();">
 
-<div id="header">
+<div id="header" class="header-library">
     <div id="header-left">
       <div id="fill-logo"><a href="/cgi-bin/info.cgi?rm=welcome"><img src="/img/fill-lib-logo.png" alt="fill"></a></div>
       <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
