--- a/templates/myaccount/library-barcodes.tmpl
+++ b/templates/myaccount/library-barcodes.tmpl
@@ -94,7 +94,8 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
+<div id="container">
+<div role="main">
     <h2>Instructions</h2>
     <ol>
       <li>Click on the barcode column to enter the barcode from your ILS.</li>
@@ -122,6 +123,7 @@ $('document').ready(function(){
 	  </div>
     </div>
     </div>
+</div>
 </div>
 
 <TMPL_INCLUDE NAME="footer.tmpl">
