--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -160,13 +160,13 @@ nav ul li
 
 nav li a
 {
-	margin-right: 1em;
+	margin-right: .8em;
 	-moz-border-radius: 0px;
 	-webkit-border-radius: 5px 5px 0px 0px;
 	border-radius: 5px 5px 0px 0px;
 	display: block;
 	float: left;
-	padding: 5px 10px;
+	padding: .5em 1em;
 	text-decoration: none;
 }
 
