header color fix

--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -3,7 +3,7 @@
 /***---Start of new library client side CSS---**/
 
 .header-library {
-	background-color: a2aac4;
+	background-color: #a2aac4;
 }
 
 #main-left {
