trying to add complimentary into library search

--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -37,9 +37,15 @@ $('document').ready(function(){
    <span> | </span>
    <a href="#" onclick="switchView('targetview')">Target Info</a>
   </div>
+
+<!--***************ARIA MARKER 'COMPLIMENTARY'***************-->
+<div id="aside" class="tone-box" role="complimentary">
+ 
   <div id="recordview">
        <div id="stat"></div>
        <div id="termlist"></div>
+  </div>
+
       <div id="ranking">
        <form name="select">
         Sort by
