added container to search on library

--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -26,6 +26,7 @@ $('document').ready(function(){
 
 
 <!-- end header.tmpl -->
+<div id="container">
 
 <script type="text/javascript">
   <!--
@@ -78,6 +79,7 @@ $('document').ready(function(){
        <div id="termlist"></div>
   </div>
 </div>
+</div><!--div id container-->
 
   <div id="footer">
       <div id="stat"></div>
