new patron changes

--- a/templates/search/new_patron_requests.tmpl
+++ b/templates/search/new_patron_requests.tmpl
@@ -58,7 +58,7 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
+<div role="main">
 
   <div id="leftcontent">
     <h2>Instructions</h2>
