no response changes

--- a/templates/search/no_response.tmpl
+++ b/templates/search/no_response.tmpl
@@ -64,18 +64,15 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
+<div role="main">
 
-  <div id="leftcontent">
     <h2>Instructions</h2>
       <p>If a lending library has not yet responded to your request, that request will be shown here.</p><br/>
       <p>If there are more possible lenders, you'll see a 'Try next lender' button; otherwise, you'll see the message "No further sources".</p><br/>
       <p>You'll also have the option to cancel the request.</p><br/>
       <p>Remember that not all libraries are open every day; it may take a few days to get a response.</p><br/>
-      <p>For any individual request, fILL sorts the list of potential lenders (a.k.a. "sources") in net-borrower/net-lender order. The Pending tab gives the first source 3 days to respond before giving you the option to try the next lender.</p><br/>
-  </div>
+      <p>For any individual request, fILL sorts the list of potential lenders (a.k.a. "sources") in net-borrower/net-lender order. The Pending tab gives the first source 3 days to respond before giving you the option to try the next lender.</p>
 
-  <div id="middlecontent">
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
@@ -85,8 +82,6 @@ $('document').ready(function(){
       <h3>No response: the lending libraries have not yet responded to these requests</h3>
       <div id="mylistDiv"></div>
     </div>
-
-  </div>
 
 </div>
 
