--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -2,7 +2,7 @@
 
 /***---Start of new library client side CSS---**/
 
-.header-library {
+#header.header-library {
 	background-color: #a2aac4;
 }
 
