--- a/templates/search/no_response.tmpl
+++ b/templates/search/no_response.tmpl
@@ -67,10 +67,10 @@ $('document').ready(function(){
 <div role="main">
 
     <h2>Instructions</h2>
-      <p>If a lending library has not yet responded to your request, that request will be shown here.</p><br/>
-      <p>If there are more possible lenders, you'll see a 'Try next lender' button; otherwise, you'll see the message "No further sources".</p><br/>
-      <p>You'll also have the option to cancel the request.</p><br/>
-      <p>Remember that not all libraries are open every day; it may take a few days to get a response.</p><br/>
+      <p>If a lending library has not yet responded to your request, that request will be shown here.</p>
+      <p>If there are more possible lenders, you'll see a 'Try next lender' button; otherwise, you'll see the message "No further sources".</p>
+      <p>You'll also have the option to cancel the request.</p>
+      <p>Remember that not all libraries are open every day; it may take a few days to get a response.</p>
       <p>For any individual request, fILL sorts the list of potential lenders (a.k.a. "sources") in net-borrower/net-lender order. The Pending tab gives the first source 3 days to respond before giving you the option to try the next lender.</p>
 
 
