--- a/templates/search/no_response.tmpl
+++ b/templates/search/no_response.tmpl
@@ -25,17 +25,17 @@ $('document').ready(function(){
                        "bSort": true,
                        "sDom": '<"H"Tfr>t<"F"ip>',
                        // TableTools requires Flash version 10...
-	               "oTableTools": {
+                 "oTableTools": {
                            "sSwfPath": "/plugins/DataTables-1.8.2/extras/TableTools/media/swf/copy_cvs_xls_pdf.swf",
-		           "aButtons": [
-			      "copy", "csv", "xls", "pdf", "print",
-			      {
-				"sExtends":    "collection",
-				"sButtonText": "Save",
-				"aButtons":    [ "csv", "xls", "pdf" ]
-			      }
-		           ]
-        	       },
+               "aButtons": [
+            "copy", "csv", "xls", "pdf", "print",
+            {
+        "sExtends":    "collection",
+        "sButtonText": "Save",
+        "aButtons":    [ "csv", "xls", "pdf" ]
+            }
+               ]
+                 },
                        "aoColumns": [
                            { "mDataProp": "gid" },
                            { "mDataProp": "cid" },
@@ -67,12 +67,13 @@ $('document').ready(function(){
 <div role="main">
 
     <h2>Instructions</h2>
-      <p>If a lending library has not yet responded to your request, that request will be shown here.</p>
-      <p>If there are more possible lenders, you'll see a 'Try next lender' button; otherwise, you'll see the message "No further sources".</p>
-      <p>You'll also have the option to cancel the request.</p>
-      <p>Remember that not all libraries are open every day; it may take a few days to get a response.</p>
-      <p>For any individual request, fILL sorts the list of potential lenders (a.k.a. "sources") in net-borrower/net-lender order. The Pending tab gives the first source 3 days to respond before giving you the option to try the next lender.</p>
-
+    <ul>
+      <li>If a lending library has not yet responded to your request, that request will be shown here.</li>
+      <li>If there are more possible lenders, you'll see a 'Try next lender' button; otherwise, you'll see the message "No further sources".</li>
+      <li>You'll also have the option to cancel the request.</li>
+      <li>Remember that not all libraries are open every day; it may take a few days to get a response.</li>
+      <li>For any individual request, fILL sorts the list of potential lenders (a.k.a. "sources") in net-borrower/net-lender order. The Pending tab gives the first source 3 days to respond before giving you the option to try the next lender.</li>
+    </ul>
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
