--- a/templates/search/unfilled.tmpl
+++ b/templates/search/unfilled.tmpl
@@ -69,7 +69,7 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
+<div role="main">
 
   <div id="leftcontent">
     <h2>Instructions</h2>
@@ -79,7 +79,7 @@ $('document').ready(function(){
     </ol>
   </div>
 
-  <div id="middlecontent">
+
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
@@ -89,8 +89,6 @@ $('document').ready(function(){
       <h3>Unfilled: the lending libraries were unable to fill these requests</h3>
       <div id="mylistDiv"></div>
     </div>
-
-  </div>
 
 </div>
 
