receiving tmpl change

--- a/templates/search/receiving.tmpl
+++ b/templates/search/receiving.tmpl
@@ -75,17 +75,14 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
+<div role="main">
 
-  <div id="leftcontent">
+
     <h2>Instructions</h2>
     <ol>
       <li>As books arrive from lending libraries to fill your ILL requests, click the 'Received' button for that book.</li>
       <li>You will have the option of printing a date-due slip.</li>
     </ol>
-  </div>
-
-  <div id="middlecontent">
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
@@ -104,8 +101,6 @@ $('document').ready(function(){
 
     <div id="multiPrint">
     </div>
-
-  </div>
 
 </div>
 
