changes to various library templates
removed main id replaced with role=main

--- a/templates/search/renewals.tmpl
+++ b/templates/search/renewals.tmpl
@@ -64,17 +64,13 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
+<div role="main">
 
-  <div id="leftcontent">
     <h2>Instructions</h2>
     <ol>
       <li>These are items that your patrons currently have out.</li>
       <li>You can request a renewal.</li>
     </ol>
-  </div>
-
-  <div id="middlecontent">
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
@@ -85,8 +81,6 @@ $('document').ready(function(){
       <h3>Request renewals (for ILL items currently out to your patrons)</h3>
       <div id="mylistDiv"></div>
     </div>
-
-  </div>
 
 </div>
 
