--- a/templates/search/returns.tmpl
+++ b/templates/search/returns.tmpl
@@ -61,17 +61,14 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
+<div role="main">
 
-  <div id="leftcontent">
     <h2>Instructions</h2>
     <ol>
       <li>If you try to check a book into your ILS, and your ILS doesn't have a record of that book, it's likely an ILL.</li>
       <li>Find the book on this screen, click 'Return', and send it back to the lending library using the return slip that came with it.</li>
     </ol>
   </div>
-
-  <div id="middlecontent">
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
@@ -82,8 +79,6 @@ $('document').ready(function(){
       <h3>Returns (ILL items currently out to your patrons)</h3>
       <div id="mylistDiv"></div>
     </div>
-
-  </div>
 
 </div>
 
