--- a/templates/search/overdue.tmpl
+++ b/templates/search/overdue.tmpl
@@ -62,17 +62,13 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
+<div role="main">
 
-  <div id="leftcontent">
     <h2>Instructions</h2>
     <ol>
       <li>You will need to contact these patrons.</li>
       <li>Items will be removed from the overdue list when you mark them as 'Returned' on the Returns screen.</li>
     </ol>
-  </div>
-
-  <div id="middlecontent">
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
@@ -83,8 +79,6 @@ $('document').ready(function(){
       <h3>Overdues (items borrowed through ILL that are now overdue)</h3>
       <div id="mylistDiv"></div>
     </div>
-
-  </div>
 
 </div>
 
