--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -448,7 +448,7 @@ input[type=submit]:focus
 input[type=submit], input[type=text], input[type=password]
 {
     border-radius:5px;
-    border: 2px solid;
+    border: 2px solid inherit;
 }
 
 #fill-button {
