--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -72,9 +72,9 @@ $('document').ready(function() {
 
 </script>
 
-<div id="main">
+<div role="main">
 
-  <div id="middlecontent">
+
     <h3>Pull list</h3>
     <table id="gradient-style">
       <thead>
@@ -99,7 +99,6 @@ $('document').ready(function() {
       </tbody>
     </table>
     
-  </div>
 
 </div>
 
