--- a/templates/search/renewals.tmpl
+++ b/templates/search/renewals.tmpl
@@ -66,12 +66,6 @@ $('document').ready(function(){
 
 <div role="main">
 
-    <h2>Instructions</h2>
-    <ol>
-      <li>These are items that your patrons currently have out.</li>
-      <li>You can request a renewal.</li>
-    </ol>
-
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
     </div>
@@ -80,6 +74,14 @@ $('document').ready(function(){
       <br/>
       <h3>Request renewals (for ILL items currently out to your patrons)</h3>
       <div id="mylistDiv"></div>
+    </div>
+
+    <div class="tone-box">
+    <h2>Instructions</h2>
+    <ol>
+      <li>These are items that your patrons currently have out.</li>
+      <li>You can request a renewal.</li>
+    </ol>
     </div>
 
 </div>
