--- a/templates/search/unfilled.tmpl
+++ b/templates/search/unfilled.tmpl
@@ -71,16 +71,6 @@ $('document').ready(function(){
 
 <div role="main">
 
-  <div id="leftcontent">
-    <h2>Instructions</h2>
-    <ol>
-      <li>If a lending library was unable to fill your request, that request will be shown here.</li>
-      <li>If there are more possible lenders, you'll see a 'Try next lender' button; otherwise, you'll see the message "No other lenders".</li>
-    </ol>
-  </div>
-
-
-
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
     </div>
@@ -89,6 +79,15 @@ $('document').ready(function(){
       <h3>Unfilled: the lending libraries were unable to fill these requests</h3>
       <div id="mylistDiv"></div>
     </div>
+
+  <div class="tone-box">
+    <h3>Instructions</h3>
+    <ol>
+      <li>If a lending library was unable to fill your request, that request will be shown here.</li>
+      <li>If there are more possible lenders, you'll see a 'Try next lender' button; otherwise, you'll see the message "No other lenders".</li>
+    </ol>
+  </div>
+
 
 </div>
 
