--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -3,25 +3,135 @@
 <script type="text/javascript">
     set_primary_tab("menu_contact");
 </script>
+
+<script type="text/javascript">
+$(document).ready(function(){
+    //create a new WebSocket object.
+    var wsUri = "wss://localhost/app/ws/";  
+    websocket = new WebSocket(wsUri);
+   
+    websocket.onopen = function(ev) { // connection is open
+        $('#message_box').append("<div class=\"system_msg\">Connected!</div>"); //notify user
+    }
+
+    //#### Message received from server?
+    websocket.onmessage = function(ev) {
+        var msg = JSON.parse(ev.data); //chat-server.pl sends JSON data
+        var type = msg.type; //message type
+        var umsg = msg.message; //message text
+        var uname = msg.name; //user name
+        var ucolor = msg.color; //color
+
+        if(type == 'usermsg')
+        {
+            $('#message_box').append("<div><span class=\"user_name\" style=\"color:#"+ucolor+"\">"+uname+"</span> : <span class=\"user_message\">"+umsg+"</span></div>");
+        }
+        if(type == 'system')
+        {
+            $('#message_box').append("<div class=\"system_msg\">"+umsg+"</div>");
+        }
+       
+        $('#message').val(''); //reset text
+    };
+   
+    websocket.onerror   = function(ev){$('#message_box').append("<div class=\"system_error\">Error Occurred - "+ev.data+"</div>");};
+    websocket.onclose   = function(ev){$('#message_box').append("<div class=\"system_msg\">Connection Closed</div>");};
+
+
+
+
+    $("#message").keypress(function (e) {
+        if (e.which == 13) {
+            $("#send-btn").click();
+            return false;  // have jQuery call e.preventDefault() and e.stopPropagation()
+        }
+    });
+
+    $("#start-chat").click(function() {
+        // Send a "joining" message so we can get history
+        var msg = {
+          message: "joining",
+          name: $("#username").text(),
+          color: "7F6D6D",
+          room: "group"
+        };
+<!--      room: $("#lid").text() + "-" + $("#username").text() -->
+        //convert and send data to server
+        websocket.send(JSON.stringify(msg));
+        
+        $("#chat-button-div").toggle();
+        $("#picture").toggle();
+        $("#chatbox").toggle();
+    });
+
+    $("#send-btn").click(function(){         //use clicks message send button  
+        var mymessage = $('#message').val();
+<!--        var myname = $('#name').val(); -->
+        var myname = $("#username").text();
+<!--        var mycolor = $('#color').val(); -->
+        var mycolor = "260CEB";
+        var myroom = "group";
+<!--    var myroom = $("#lid").text() + "-" + $("#username").text(); -->
+
+        if(mymessage == ""){ //emtpy message?
+            alert("Enter Some message Please!");
+            return;
+        }
+       
+        //prepare json data
+        var msg = {
+          message: mymessage,
+          name: myname,
+          color: mycolor,
+          room: myroom
+        };
+        //convert and send data to server
+        websocket.send(JSON.stringify(msg));
+    });
+   
+}); // end document.onReady()
+</script>
+
+
+
 <div id="container">
 
 	<div id="main-info-left" class="tone-box" role="main">
-	    <p>If you require additional help requesting an item through fILL please visit or contact your local public library.</p>
-			<h3><TMPL_VAR name="library"></h3>
-			<p>Phone: <TMPL_VAR name="phone"></p>
-			<p>Email: <a href='mailto:<TMPL_VAR name="email_address">'><TMPL_VAR name="email_address"></a></p>
-			<p>Address:<br/>
-			<TMPL_VAR name="mailing_address_line1"><br/>
-			<TMPL_VAR name="mailing_address_line2"><br/>
-<!--			<TMPL_VAR name="mailing_address_line3"><br/> -->
-			<TMPL_VAR name="city">, <TMPL_VAR name="province"> <TMPL_VAR name="post_code">
-		</p>
+	  <p>If you require additional help requesting an item through fILL please visit or contact your local public library.</p>
+	  <h3><TMPL_VAR name="library"></h3>
+	  <p>Phone: <TMPL_VAR name="phone"></p>
+	  <p>Email: <a href='mailto:<TMPL_VAR name="email_address">'><TMPL_VAR name="email_address"></a></p>
+	  <p>Address:<br/>
+	    <TMPL_VAR name="mailing_address_line1"><br/>
+	      <TMPL_VAR name="mailing_address_line2"><br/>
+		<!--			<TMPL_VAR name="mailing_address_line3"><br/> -->
+		<TMPL_VAR name="city">, <TMPL_VAR name="province"> <TMPL_VAR name="post_code">
+	  </p>
 	</div>
 
 	<div id="aside-img-right" role="complimentary">
-		<img src="/img/fill-contact.jpg" alt="Child sitting on a the floor of a book store, engrossed in reading">
-		      <p class="note">Image care of <a href="https://www.flickr.com/photos/48439369@N00/2100913578">Tim Pierce</a></p>
+	  <div id="chat-button-div">
+	    <button id="start-chat">Start chat</button>
+	  </div>
 
+	  <div id="chatbox" class="chat_wrapper" style="display:none">
+	    <div class="message_box" id="message_box"></div>
+	    <!--
+		<div>
+		  <input type="text" name="name" id="name" placeholder="Your Name" maxlength="10"/>
+		  <input type="text" name="color" id="color" maxlength="10"/>
+		</div>
+		-->
+	    <div class="panel">
+	      <input type="text" name="message" id="message" placeholder="Message" maxlength="80"/>
+	      <button id="send-btn">Send</button>
+	    </div>
+	  </div> <!-- chat_wrapper -->
+	  
+	  <div id="picture">
+	    <img src="/img/fill-contact.jpg" alt="Child sitting on a the floor of a book store, engrossed in reading">
+	    <p class="note">Image care of <a href="https://www.flickr.com/photos/48439369@N00/2100913578">Tim Pierce</a></p>
+	  </div>
 	</div>
 
 </div>
